@@ -69,6 +69,10 @@
             <webResources>
                 <resource>
                     <directory>../denodo-odata4-service-5.5/src/main/webapp</directory>
+                    <excludes>
+                      <!-- Exclude this since it is copied from the current project -->
+                      <exclude>**/cors_settings.xml</exclude>
+                    </excludes>
                 </resource>
             </webResources>
           </configuration>
